# micBridgeDesktop

./: .gitmodules  ApplicationStyle.css  CMakeLists.txt  UI_AudioLevelsIODevice.cpp  UI_AudioLevelsIODevice.h  UI_AvailableServicesList.cpp  UI_AvailableServicesList.h  UI_AvailableServicesListModel.cpp  UI_AvailableServicesListModel.h  UI_CommonResources.qrc  UI_DriverControl.cpp  UI_DriverControl.h  UI_MainWindow.cpp  UI_MainWindow.h  WMFAACDecoder.cpp  WMFAACDecoder.h  WMFUtils.cpp  WMFUtils.h  main.cpp
Broadcast/: BC_DispatchQueue.h  BC_Listener.cpp  BC_Listener.h  CMakeLists.txt
Broadcast/Internal/: BC_BufferedMediaSink.cpp  BC_BufferedMediaSink.h  BC_ListenerImpl.h  BC_Live555Runtime.h
Broadcast/include/Broadcast/: BC_AudioFramesHandler.h  BC_ErrorHandler.h  BC_SuccessHandler.h
Broadcast/src/: BC_BufferedMediaSink.cpp  BC_BufferedMediaSink.h  BC_Listener.cpp  BC_ListenerImpl.cpp  BC_ListenerImpl.h  BC_Live555Runtime.cpp
Icons/: application_icon.rc
ServiceDiscovery/: CMakeLists.txt  DNSSDDefs.h  DNSSDDiscoveryManager.cpp  DNSSDDiscoveryManager.h  mDNSAsyncRunner.cpp  mDNSAsyncRunner.h  mDNSPlatformIntegration.cpp  mDNSPlatformIntegration.h
ServiceDiscovery/src/: DNSSDDiscoveryManager.cpp  mDNSAsyncRunner.cpp  mDNSAsyncRunner.h  mDNSPlatformIntegration.cpp
assets/nsis/: NSIS.definitions.nsh.in
